--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
-SBHABBITS_TOKEN=xxxxxxxxxx:xxxxxxxxxxxx_xxxxxxxxxxxxxxxxxxxxxx
+SBHABITS_TOKEN=xxxxxxxxxx:xxxxxxxxxxxx_xxxxxxxxxxxxxxxxxxxxxx
+SBHABITS_MAINTAINER_CHAT_ID=111111111
+# SBHABITS_DB_TYPE is one of (sqlite)
+SBHABITS_DB_TYPE=sqlite
+SBHABITS_SQLITE_FILE=bot.db
+SBHABITS_SQLITE_MIGRATION_PATH=migrations/sqlite
